[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/Scripts/Level Select.gd" type="Script" id=1]

[node name="Level Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 434.0
margin_top = 144.0
margin_right = 590.0
margin_bottom = 455.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 16

[node name="LevelSelectText" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 31.0
text = "Selecione o n√≠vel:
"
align = 1

[node name="Tutorial" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 156.0
margin_bottom = 87.0
rect_min_size = Vector2( 150, 40 )
text = "Tutorial"

[node name="Level1" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 156.0
margin_bottom = 143.0
rect_min_size = Vector2( 150, 40 )
text = "Resolvendo bugs"

[node name="Level2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 156.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 40 )
text = "Solucionando conflitos"

[node name="Level3" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 156.0
margin_bottom = 255.0
rect_min_size = Vector2( 150, 40 )
text = "Concertando link"

[node name="Level4" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 156.0
margin_bottom = 311.0
rect_min_size = Vector2( 150, 40 )
text = "Finalizando"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level4" to="." method="_on_Level4_pressed"]
